[CICD] Use external LLVM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -222,8 +222,5 @@
         "--background-index"
     ],
     "lldb.showDisassembly": "auto",
-    "lldb.dereferencePointers": true,
-    "cmake.configureEnvironment": {
-        "CMAKE_TOOLCHAIN_FILE": "./Extern/vcpkg/scripts/buildsystems/vcpkg.cmake"
-    }
+    "lldb.dereferencePointers": true
 }
