--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,20 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y build-essential xz-utils curl libx11-dev xorg-dev libglu1-mesa-dev
 
+      - name: Cache LLVM
+        id: cache-llvm
+        uses: actions/cache@v2
+        with:
+          path: ${{ runner.temp }}/llvm
+          key: llvm-13.0
+
+      - name: Install LLVM
+        uses: KyleMayes/install-llvm-action@v1
+        with:
+          version: "13.0"
+          directory: ${{ runner.temp }}/llvm
+          cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+
       - name: Get CMake
         uses: lukka/get-cmake@latest
 
@@ -75,6 +89,7 @@ jobs:
         uses: lukka/run-vcpkg@v7
         id: runvcpkg
         with:
+          setupOnly: true
           vcpkgDirectory: '${{ github.workspace }}/Extern/vcpkg'
           vcpkgTriplet: '${{ matrix.triplet }}'
 
@@ -87,7 +102,7 @@ jobs:
           buildWithCMakeArgs: --config Release
           buildDirectory: 'Build'
           useVcpkgToolchainFile: true
-          vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
+          vcpkgTriplet: ${{ matrix.triplet }}
 
       - name: Upload binaries as artifacts
         uses: actions/upload-artifact@v2
@@ -106,7 +121,13 @@ jobs:
           buildWithCMakeArgs: --config Debug
           buildDirectory: 'Build'
           useVcpkgToolchainFile: true
-          vcpkgTriplet: ${{ steps.runvcpkg.outputs.RUNVCPKG_VCPKG_TRIPLET_OUT }}
+          vcpkgTriplet: ${{ matrix.triplet }}
+
+      - name: Configure
+        run: cmake -B Build -S . -DCMAKE_TOOLCHAIN_FILE=${{ github.workspace }}/Extern/vcpkg/scripts/buildsystems/vcpkg.cmake
+
+      - name: Build Debug
+        run: cmake --build Build --config Debug
 
       - name: Run Tests
         working-directory: ./Build
