--- a/Libs/Backends/LLVM/CMakeLists.txt
+++ b/Libs/Backends/LLVM/CMakeLists.txt
@@ -9,24 +9,13 @@ rift_target_enable_CPP20(RiftBackendLLVM)
 set_target_properties (RiftBackendLLVM PROPERTIES FOLDER Rift)
 rift_target_define_platform(RiftBackendLLVM)
 rift_target_shared_output_directory(RiftBackendLLVM)
+
 target_link_libraries(RiftBackendLLVM PUBLIC
     Rift::Rift
     ${llvm_libs}
 )
-
-llvm_map_components_to_libnames(backend_llvm_libs Support Core IRReader)
-add_library(LLVM_LIB STATIC)
-target_include_directories(LLVM_LIB PUBLIC ${LLVM_INCLUDE_DIRS})
-target_compile_definitions(LLVM_LIB PUBLIC ${LLVM_DEFINITIONS})
-target_link_libraries(LLVM_LIB PUBLIC
-    Rift::Rift
-    ${backend_llvm_libs}
-)
-
-target_link_libraries(RiftBackendLLVM PUBLIC
-    Rift::Rift
-    LLVM
-)
+target_include_directories(RiftBackendLLVM PUBLIC ${LLVM_INCLUDE_DIRS})
+target_compile_definitions(RiftBackendLLVM PUBLIC ${LLVM_DEFINITIONS})
 
 install(TARGETS RiftBackendLLVM
     EXPORT RiftTargets
