--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -44,12 +44,13 @@ target_include_directories(IconFontCppHeaders INTERFACE IconFontCppHeaders)
 set(RIFT_LLVM_PATH "" CACHE STRING "Location of an external LLVM installation to use. CMake will try to find if this path is not set")
 if (NOT RIFT_LLVM_PATH STREQUAL "")
     message(STATUS "Provided LLVM installation: ${RIFT_LLVM_PATH}")
-    set(LLVM_DIR "${RIFT_LLVM_PATH}/llvm/cmake/modules")
-    set(LLVM_INCLUDE_DIRS "${RIFT_LLVM_PATH}/llvm/include")
+    set(LLVM_DIR "${RIFT_LLVM_PATH}/build/lib/cmake/llvm")
 endif()
 find_package(LLVM CONFIG REQUIRED)
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 
-message(STATUS "LLVM Includes: ${LLVM_INCLUDE_DIRS}")
+message(STATUS "LLVM_INCLUDE_DIRS: ${LLVM_INCLUDE_DIRS}")
+message(STATUS "LLVM_DEFINITIONS: ${LLVM_DEFINITIONS}")
+
 llvm_map_components_to_libnames(llvm_libs Support Core IRReader)
