--- a/.github/workflows/periodic-format.yml
+++ b/.github/workflows/periodic-format.yml
@@ -5,12 +5,13 @@ on:
   schedule:
     - cron: '0 1 * * 1,3,6'  # every day at midnight
 
-env:
-  BUILD_TYPE: Release
-
 jobs:
   format:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+    matrix:
+      os: ubuntu-latest
+      build-type: Debug
 
     steps:
     - name: Checkout repository
@@ -19,6 +20,26 @@ jobs:
     - name: Init Submodules
       uses: snickerbockers/submodules-init@v4
 
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y build-essential xz-utils curl libx11-dev xorg-dev libglu1-mesa-dev
+
+    - name: Cache LLVM
+      id: cache-llvm
+      uses: actions/cache@v2
+      with:
+        path: ${{ runner.temp }}/llvm
+        key: llvm-13.0-${{ matrix.os }}
+
+
+    - name: Install LLVM (pre-built)
+      uses: KyleMayes/install-llvm-action@v1
+      with:
+        version: "13.0"
+        directory: ${{ runner.temp }}/llvm
+        cached: ${{ steps.cache-llvm.outputs.cache-hit }}
+
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
@@ -26,11 +47,11 @@ jobs:
 
     - name: Configure CMake
       shell: bash
-      run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/Build -DCMAKE_BUILD_TYPE=$BUILD_TYPE
+      run: cmake -S ${{github.workspace}} -B ${{github.workspace}}/Build -DCMAKE_BUILD_TYPE=${{ matrix.build-type }}
 
     - name: Format
       shell: bash
-      run: cmake --build Build --config $BUILD_TYPE --target ClangFormat
+      run: cmake --build Build --config ${{ matrix.build-type }} --target ClangFormat
 
     - name: Commit changes
       run: |
