--- a/.github/workflows/periodic-format.yml
+++ b/.github/workflows/periodic-format.yml
@@ -54,12 +54,15 @@ jobs:
       run: cmake --build Build --config ${{ matrix.build-type }} --target ClangFormat
 
     - name: Commit changes
+      id: commit
+      continue-on-error: true
       run: |
         git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
         git commit -m "Applied clang-format" -a
 
     - name: Push changes
+      if: steps.commit.outcome == 'success'
       uses: ad-m/github-push-action@v0.6.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
