--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,19 +87,13 @@ jobs:
       - name: Get CMake
         uses: lukka/get-cmake@latest
 
-      - name: Set Compiler Environment
-        uses: lukka/set-shell-env@v1
-        with:
-          CXX: ${{ matrix.cxx }}
-          CC: ${{ matrix.cc }}
-
       - name: Build Release
         uses: lukka/run-cmake@v3.3
         with:
           cmakeGenerator: 'Ninja'
           cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
           cmakeBuildType: Release
-          cmakeAppendedArgs: "-DRIFT_LLVM_PATH='${{ runner.temp }}/llvm'"
+          cmakeAppendedArgs: -DCMAKE_C_COMPILER=${{ matrix.cc }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -DRIFT_LLVM_PATH='${{ runner.temp }}/llvm'
           buildWithCMakeArgs: --config Release
           buildDirectory: 'Build'
 
@@ -117,7 +111,7 @@ jobs:
           cmakeGenerator: 'Ninja'
           cmakeListsOrSettingsJson: CMakeListsTxtAdvanced
           cmakeBuildType: Debug
-          cmakeAppendedArgs: "-DRIFT_LLVM_PATH='${{ runner.temp }}/llvm'"
+          cmakeAppendedArgs: -DCMAKE_C_COMPILER=${{ matrix.cc }} -DCMAKE_CXX_COMPILER=${{ matrix.cxx }} -DRIFT_LLVM_PATH='${{ runner.temp }}/llvm'
           buildWithCMakeArgs: --config Debug
           buildDirectory: 'Build'
 
