Moved Editor code into a library

--- a/Apps/CLI/CMakeLists.txt
+++ b/Apps/CLI/CMakeLists.txt
@@ -1,24 +1,25 @@
 
-add_executable(RiftCLI Src/main.cpp)
-add_executable(Rift::CLI ALIAS RiftCLI)
-set_target_properties(RiftCLI PROPERTIES OUTPUT_NAME "Rift")
-target_include_directories(RiftCLI PUBLIC Include)
+add_executable(RiftCLIExe Src/main.cpp)
+add_executable(Rift::CLIExe ALIAS RiftCLIExe)
+set_target_properties(RiftCLIExe PROPERTIES OUTPUT_NAME "Rift")
+
+target_include_directories(RiftCLIExe PUBLIC Include)
 file(GLOB_RECURSE CLI_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
-target_sources(RiftCLI PRIVATE ${CLI_SOURCE_FILES})
-rift_target_enable_CPP20(RiftCLI)
-set_target_properties (RiftCLI PROPERTIES FOLDER Rift)
-target_link_libraries(RiftCLI PUBLIC
+target_sources(RiftCLIExe PRIVATE ${CLI_SOURCE_FILES})
+rift_target_enable_CPP20(RiftCLIExe)
+set_target_properties (RiftCLIExe PROPERTIES FOLDER Rift/Executables)
+target_link_libraries(RiftCLIExe PUBLIC
     Rift::Rift
     Rift::Backend::LLVM
     Rift::Backend::Cpp
     CLI11
 )
-rift_target_define_platform(RiftCLI)
-rift_target_shared_output_directory(RiftCLI)
+rift_target_define_platform(RiftCLIExe)
+rift_target_shared_output_directory(RiftCLIExe)
 
-set_icon(RiftCLI ../../Resources/Icon.ico)
+set_icon(RiftCLIExe ../../Resources/Icon.ico)
 
-install(TARGETS RiftCLI
+install(TARGETS RiftCLIExe
     EXPORT RiftTargets
     LIBRARY DESTINATION Lib
     ARCHIVE DESTINATION Lib
