--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -2,7 +2,10 @@
 set(RIFT_CORE_BUILD_TESTS ${RIFT_BUILD_TESTS} CACHE BOOL "Build RiftCore tests")
 add_subdirectory(Core)
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Framework)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Backends/LLVM)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/Backends/Cpp)
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/UI)
+add_subdirectory(Framework)
+add_subdirectory(Backends/LLVM)
+add_subdirectory(Backends/Cpp)
+
+add_subdirectory(UI)
+add_subdirectory(Views/Nodes)
+add_subdirectory(Editor)
