Added empty IR generation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,18 @@ include(CMake/Util.cmake)
 include(CMake/SetIcon.cmake)
 include(CMake/CheckClangTools.cmake)
 
+
+# Add LLVM
+set(RIFT_LLVM_PATH "" CACHE STRING "Location of an external LLVM installation to use. CMake will try to find if this path is not set")
+if (NOT RIFT_LLVM_PATH STREQUAL "")
+    message(STATUS "Provided LLVM installation: ${RIFT_LLVM_PATH}")
+    set(LLVM_DIR "${RIFT_LLVM_PATH}/build/lib/cmake/llvm")
+endif()
+find_package(LLVM CONFIG REQUIRED)
+message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
+message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
+
+
 add_subdirectory(Extern)
 
 add_subdirectory(Libs)
