--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -222,5 +222,12 @@
         "--background-index"
     ],
     "lldb.showDisassembly": "auto",
-    "lldb.dereferencePointers": true
+    "lldb.dereferencePointers": true,
+    "cmake.debugConfig": {
+        "cwd": "${workspaceRoot}",
+        "args": [
+            "--project",
+            "Project"
+        ]
+    }
 }
