Generate main function

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -227,7 +227,8 @@
         "cwd": "${workspaceRoot}",
         "args": [
             "--project",
-            "Project"
+            "Project",
+            "--backend LLVM"
         ]
     }
 }
