--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -228,7 +228,8 @@
         "args": [
             "--project",
             "Project",
-            "--backend LLVM"
+            "--backend",
+            "LLVM"
         ]
     }
 }
