Improved Access syntax, progress on runtime accesses

--- a/Extern/CMakeLists.txt
+++ b/Extern/CMakeLists.txt
@@ -44,7 +44,7 @@ target_include_directories(IconFontCppHeaders INTERFACE IconFontCppHeaders)
 set(RIFT_LLVM_PATH "" CACHE STRING "Location of an external LLVM installation to use. CMake will try to find if this path is not set")
 if (NOT RIFT_LLVM_PATH STREQUAL "")
     message(STATUS "Provided LLVM installation: ${RIFT_LLVM_PATH}")
-    set(LLVM_DIR "${RIFT_LLVM_PATH}/build/lib/cmake/llvm")
+    set(LLVM_DIR "${RIFT_LLVM_PATH}/lib/cmake/llvm")
 endif()
 find_package(LLVM CONFIG REQUIRED)
 message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")
