--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -59,9 +59,8 @@ jobs:
 
       - name: Download pre-built LLVM
         run: |
-          cd ${{ runner.temp }}
-          curl -L -o llvm.zip https://github.com/piperift/rift-llvm/releases/download/v13.0.1/llvm-${{ matrix.os-name }}.zip
-          7z x llvm.zip
+          curl -L -o "${{ runner.temp }}/llvm.zip" https://github.com/piperift/rift-llvm/releases/download/v13.0.1/llvm-${{ matrix.os-name }}.zip
+          7z x -o"${{ runner.temp }}" "${{ runner.temp }}/llvm.zip"
 
       - name: Get CMake
         uses: lukka/get-cmake@latest
