--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,6 +61,8 @@ jobs:
         run: |
           curl -L -o "${{ runner.temp }}/llvm.zip" https://github.com/piperift/rift-llvm/releases/download/v13.0.1/llvm-${{ matrix.os-name }}.zip
           7z x -o"${{ runner.temp }}" "${{ runner.temp }}/llvm.zip"
+          ls ${{ runner.temp }}
+          ls ${{ runner.temp }}/llvm
 
       - name: Get CMake
         uses: lukka/get-cmake@latest
