Improved project manager

--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -10,4 +10,8 @@ rift_target_define_platform(RiftTests)
 rift_target_shared_output_directory(RiftTests)
 target_link_libraries(RiftTests PUBLIC ${PROJECT_NAME} Bandit)
 
+if(RIFT_ENABLE_PROFILER)
+    # Force profiler disabled in tests
+    target_compile_definitions(RiftTests PUBLIC RIFT_ENABLE_PROFILER=0)
+endif()
 add_test(NAME RiftTests COMMAND $<TARGET_FILE:RiftTests>)
