--- a/Apps/Editor/CMakeLists.txt
+++ b/Apps/Editor/CMakeLists.txt
@@ -8,7 +8,12 @@ file(GLOB_RECURSE RiftEditor_SOURCE_FILES CONFIGURE_DEPENDS Src/*.cpp Src/*.h)
 target_sources(RiftEditorExe PRIVATE ${RiftEditor_SOURCE_FILES})
 rift_target_enable_CPP20(RiftEditorExe)
 set_target_properties (RiftEditorExe PROPERTIES FOLDER Rift/Executables)
-target_link_libraries(RiftEditorExe PUBLIC Rift::Editor)
+target_link_libraries(RiftEditorExe PUBLIC
+    Rift::Editor
+    Rift::Backend::LLVM
+    Rift::Backend::Cpp
+    Rift::View::Graph
+)
 rift_target_define_platform(RiftEditorExe)
 rift_target_shared_output_directory(RiftEditorExe)
 
