--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,9 @@ include(CMake/CheckClangTools.cmake)
 # Add LLVM
 include(CMake/LLVM.cmake)
 
-
 message(STATUS "LLVM_USE_CRT_RELEASE ${LLVM_USE_CRT_RELEASE}")
 message(STATUS "LLVM_USE_CRT_DEBUG ${LLVM_USE_CRT_DEBUG}")
-include(ChooseMSVCCRT)
+#include(ChooseMSVCCRT)
 
 add_subdirectory(Extern)
 
