--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,8 +1,14 @@
 name: build
 
+
 on:
   push:
+    branches:
+      - '**'
+    tags-ignore:
+      - 'v*.*.*'
   pull_request:
+  workflow_call:
 
 env:
   cache-version: 0
@@ -14,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        config: [Release, Debug]
+        config: [Release]
         name: [windows-msvc, windows-clang, linux-clang, linux-gcc, macos-clang]
         include:
           - name: windows-msvc
@@ -82,7 +88,7 @@ jobs:
 
       - name: Download pre-built development LLVM for Rift
         run: |
-          curl -L -o "${{ runner.temp }}/rift-llvm.zip" https://github.com/piperift/rift-llvm/releases/download/v13.0.1/llvm-${{ matrix.os-name }}.zip
+          curl -L -o "${{ runner.temp }}/rift-llvm.zip" https://github.com/piperift/rift-llvm/releases/download/v13.0.1/llvm-${{ matrix.os-name }}-${{ matrix.config }}.zip
           7z x -o"${{ runner.temp }}/rift" "${{ runner.temp }}/rift-llvm.zip"
 
       - name: Get CMake
@@ -105,7 +111,7 @@ jobs:
         uses: actions/upload-artifact@v2
         if: ${{ matrix.config == 'Release' && matrix.compiler == 'clang' }} # Only clang artifacts are stored
         with:
-          name: rift-${{ matrix.name }}
+          name: rift-${{ matrix.os-name }}
           path: Build/Bin
 
       - name: Run Tests
