--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,7 +68,7 @@ jobs:
           sudo apt-get install -y build-essential xz-utils curl libx11-dev xorg-dev libglu1-mesa-dev
 
       - uses: ilammy/msvc-dev-cmd@v1
-        if: ${{ matrix.compiler == 'cl' }}
+        if: ${{ matrix.compiler == 'msvc' }}
 
       - name: Cache LLVM
         if: ${{ matrix.compiler == 'clang' }}
