Renamed Pipe in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ option(RIFT_BUILD_TESTS "Build Rift and Core tests" ${RIFT_IS_PROJECT})
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 include(CMake/DownloadProject.cmake)
-include(Libs/Core/CMake/Util.cmake)
+include(Libs/Pipe/CMake/Util.cmake)
 include(CMake/Util.cmake)
 include(CMake/SetIcon.cmake)
 include(CMake/CheckClangTools.cmake)
@@ -59,9 +59,9 @@ if(CLANG_FORMAT_EXE)
         Apps/**/*.cpp Apps/**/*.h
         Libs/Framework/**/*.cpp Libs/Framework/**/*.h
         Libs/UI/**/*.cpp Libs/UI/**/*.h
-        Libs/Core/Include/**/*.cpp Libs/Core/Include/**/*.h
-        Libs/Core/Src/**/*.cpp Libs/Core/Src/**/*.h
-        Libs/Core/Tests/**/*.cpp Libs/Core/Tests/**/*.h
+        Libs/Pipe/Include/**/*.cpp Libs/Pipe/Include/**/*.h
+        Libs/Pipe/Src/**/*.cpp Libs/Pipe/Src/**/*.h
+        Libs/Pipe/Tests/**/*.cpp Libs/Pipe/Tests/**/*.h
         Tests/**/*.cpp Tests/**/*.h
     )
 
@@ -74,8 +74,8 @@ if(CLANG_TIDY_EXE)
         Apps/**/*.cpp
         Libs/Framework/**/*.cpp
         Libs/UI/**/*.cpp
-        Libs/Core/Include/**/*.cpp
-        Libs/Core/Src/**/*.cpp
+        Libs/Pipe/Include/**/*.cpp
+        Libs/Pipe/Src/**/*.cpp
     )
 
     add_custom_target(ClangTidy COMMAND ${DO_CLANG_TIDY} --fix-errors --fix-notes ${ALL_SOURCE_FILES})
