--- a/Libs/CMakeLists.txt
+++ b/Libs/CMakeLists.txt
@@ -1,6 +1,6 @@
 
-set(RIFT_CORE_BUILD_TESTS ${RIFT_BUILD_TESTS} CACHE BOOL "Build RiftCore tests")
-add_subdirectory(Core)
+set(PIPE_BUILD_TESTS ${RIFT_BUILD_TESTS} CACHE BOOL "Build Pipe tests")
+add_subdirectory(Pipe)
 
 add_subdirectory(Framework)
 add_subdirectory(Backends/LLVM)
