--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -63,7 +63,7 @@ rel  = "sitemap"
 
 [permalinks]
   blog = "/blog/:title/"
-  docs = "/docs/1.0/:sections[1:]/:title/"
+  docs = "/docs/:sections[1:]/:title/"
 
 [minify.tdewolff.html]
   keepWhitespace = false
