--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,11 +9,13 @@ media_folder: "static/images"
 public_folder: "/images"
 
 collections:
-  - name: "posts"
-    label: "Posts"
-    label_singular: 'Post'
+  - name: "blog"
+    label: "Blog"
+    label_singular: 'post'
     folder: "content/blog"
     create: true
+    nested:
+      depth: 100
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
@@ -28,3 +30,27 @@ collections:
       - { label: "Contributors", name: "contributors", widget: "list"}
       - { label: "Homepage", name: "homepage", widget: "boolean", required: false}
       - { label: "Body", name: "body", widget: "markdown" }
+    meta: { path: { widget: string, label: 'Path', index_file: 'index' } }
+
+  - name: "docs"
+    label: "Docs"
+    label_singular: 'page'
+    folder: "content/docs"
+    create: true
+    nested:
+      depth: 100
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Date", name: "date", widget: "date" }
+      - { label: "Modified Date", name: "lastmod", widget: "date" }
+      - { label: "Images", name: "images", widget: "list", summary: '{{fields.image}}', field: {
+            label: Image, name: image, widget: image
+          }, required: false
+        }
+      - { label: "Categories", name: "categories", widget: "list", required: false}
+      - { label: "Tags", name: "tags", widget: "list", required: false}
+      - { label: "Contributors", name: "contributors", widget: "list"}
+      - { label: "Homepage", name: "homepage", widget: "boolean", required: false}
+      - { label: "Body", name: "body", widget: "markdown" }
+    meta: { path: { widget: string, label: 'Path', index_file: '_index' } }
